my Second Commit

--- a/src/Components/Navbar/Navbar2.css
+++ b/src/Components/Navbar/Navbar2.css
@@ -10,6 +10,10 @@
     background-position: center;
     height: 100px;
 }
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
 .nav_logo{
    min-width: 40%;
 }
